@@ -1,3 +1,10 @@
+2013-01-01  Ian Lance Taylor  <iant@google.com>
+
+	PR other/55536
+	* mmap.c (backtrace_alloc): Don't call sync functions if not
+	threaded.
+	(backtrace_free): Likewise.
+
 2012-12-12  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
 	* mmapio.c: Define MAP_FAILED if not defined.
@@ -26,6 +33,7 @@
 
 	PR other/55312
 	* configure.ac: Only add -Werror if building a target library.
+	* configure: Rebuild.
 
 2012-11-12  Ian Lance Taylor  <iant@google.com>
 	    Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
